Jenkins_pipeline_infrastructure.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "This is a template for ec2 instance creation for Master and slave in Jenkins"

Parameters:    
    MasterEc2InstanceType:
      Type: String
      Default: "t3.micro"
      Description: "Ec2 Instance Type"
    
    MasterInstanceAMI:
      Type: String
      Default: "ami-07a00cf47dbbc844c"
      Description: "Master EC2 AMI"
    
    NodeInstanceAMI:
      Type: String
      Default: "ami-07a00cf47dbbc844c"
      Description: "Slave EC2 AMI"
    
    ProdInstanceAMI:
      Type: String
      Default: "ami-07a00cf47dbbc844c"
      Description: "Slave EC2 AMI"

    NodeEc2InstanceType:
      Type: String
      Default: "m7i-flex.large"
      Description: "Node Ec2 Instance Type"
    
    ProdEc2InstanceType:
      Type: String
      Default: "m7i-flex.large"
      Description: "Production Ec2 Instance Type"
    
    MasterInstanceName:
      Type: String
      Default: "jenkinsmaster"
      Description: "Jenkins Master Instance Name"
    
    MasterSecurityGroupName:
      Type: String
      Default: "jenkinsmastersg"
      Description: "Jenkins Master Security Group Name"
    
    NodeSecurityGroupName:
      Type: String
      Default: "jenkinsnodesg"
      Description: "Jenkins Node Security Group Name"

    NodeInstanceName:
      Type: String
      Default: "jenkinsnode"
      Description: "Jenkins Node Instance Name"

    ProdInstanceName:
      Type: String
      Default: "productioninstance"
      Description: "Jenkins Node Production Instance Name"
    
    KeyPairNode:
      Type: String
      Default: "slavekeypair"
      Description: "Slave key Pair"

    KeyPairMaster:
      Type: String
      Default: "masterkeypair"
      Description: "Master key Pair"
    
    KeyPairBastionHost:
      Type: String
      Default: "bastionhostkeypair"
      Description: "Master key Pair"
    
    VPCID:
      Type: String
      Default: "vpc-0afae37be00f20bba"
      Description: "Aws VPC"

# VPC Name   
    VpcName:
      Type: String
      Default: "prod-vpc"
      Description: "VPC"

#VPC Cidr block      
    VpcCidrbblock:
      Type: String
      Default: "10.0.0.0/16"
      Description: "IPv4 Cidrblock"

#VPC Instance Tenancy     
    VpcInstanceTenacy:
      Type: String
      Default: "default"
      Description: "The allowed tenancy of instances launched into the VPC"

#Public Subnet name for jenkins master    
    PublicSubnetNameApsouth1a:
      Type: String
      Default: "publicsubnetjenkinsmaster"
      Description: "Public subnet for jenkins master"

    PublicSubnetNameApsouth1b:
      Type: String
      Default: "publicsubnetapsouth1b"
      Description: "Public subnet for jenkins master"

#Public Subnet AZ    
    AZNamePublicSubnetApSouth1a:
      Type: String
      Default: "ap-south-1a"
      Description: "Public subnet AZ"

    AZNamePublicSubnetApSouth1b:
      Type: String
      Default: "ap-south-1b"
      Description: "Public subnet AZ"


#Cidr block for public subnet 
    PublicSubnetcidrblockApSouth1a:
      Type: String
      Default: "10.0.1.0/24"
      Description: "Public subnet cidr block"

#Cidr block for public subnet 
    PublicSubnetcidrblockApSouth1b:
      Type: String
      Default: "10.0.3.0/24"
      Description: "Public subnet cidr block"

#VPC Internet Gateway
    InternetGwName:
      Type: String
      Default: "jenkinsprojectigw"
      Description: "Internet Gateway"

#Route Table Name Public Subnet
    RouteTableNamePublicSubnet:
      Type: String
      Default: "publicsubnetroutetable"
      Description: "Route table for Public Subnet"

#Private Subnet name
    PrivateSubnetName:
      Type: String
      Default: "privatesubnetjenkinsslave"
      Description: "Private subnet for jenkins slave"

#Private Subnet name
    PrivateSubnetNameapsouth1a:
      Type: String
      Default: "privatesubnetapsouth1a"
      Description: "Private subnet for jenkins slave"

#Cidr block for private subnet  
    PrivateSubnetcidrblock:
      Type: String
      Default: "10.0.2.0/24"
      Description: "Private subnet cidr block"

#Cidr block for private subnet  
    PrivateSubnetcidrblockapsouth1a:
      Type: String
      Default: "10.0.4.0/24"
      Description: "Private subnet cidr block"

#VPC NAT Gateway
    NatGateway:
      Type: String
      Default: "jenkinsprojectnatgw"
      Description: "NAT Gateway"

#Route Table Name Private Subnet
    RouteTableNamePrivateSubnet:
      Type: String
      Default: "privatesubnetroutetable"
      Description: "Route table for Private Subnet"

#Private Subnet AZ name    
    AZNamePrivateSubnet:
      Type: String
      Default: "ap-south-1b"
      Description: "Private subnet AZ"
    
    AZNamePrivateSubnetApSouth1a:
      Type: String
      Default: "ap-south-1a"
      Description: "Private subnet AZ"

#Bastion host Ec2 Instance
    BastionHostEc2InstanceName:
      Type: String
      Default: "bastionhost"
      Description: "Bastionhost instance name"

#Bastion host Instance Type
    BastionHostEc2InstanceType:
      Type: String
      Default: "t3.micro"
      Description: "Node Ec2 Instance Type"

#Bastion host AMI
    BastionHostAMI:
      Type: String
      Default: "ami-07a00cf47dbbc844c"
      Description: "Bastion Host AMI"

#Bastion host Security Group name
    BastionHostSecurityGroupName:
      Type: String
      Default: "bastionhostsg"
      Description: "Bastion Host Security Group Name"

    ProdInstanceSecurityGroupName:
          Type: String
          Default: "prodinstancesg"
          Description: "Production Instance Security Group Name"

#Load balancer name
    ApplicationLoadBalancerName:
          Type: String
          Default: "flaskappalb"
          Description: "Application Load Balancer Name"

#Load Balancer scheme ApplicationLoadBalancerScheme
    ApplicationLoadBalancerScheme:
          Type: String
          Default: "internet-facing"
          Description: "Application Load Balancer Scheme"

#Load Balancer security group name
    ALBSecurityGroupName:
          Type: String
          Default: "Alb-sg"
          Description: "Application Load Balancer Security group"

#Load Balancer security group name
    ALBTargetGroupName:
          Type: String
          Default: "Alb-targetgroup"
          Description: "Application Load Balancer Target group"

    ASGName:
        Type: String
        Default: "todoapp-asg"
        Description: "AutoScaling group name"
    




Resources:
#VPC
    AbishekVPC:
      Type: AWS::EC2::VPC
      Properties:
          CidrBlock: !Ref VpcCidrbblock
          InstanceTenancy: !Ref VpcInstanceTenacy
          Tags:
            - Key: Name
              Value: !Ref  VpcName

#Public Subnet
    PublicSubnetApSouth1a:
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref AbishekVPC
          AvailabilityZone: !Ref AZNamePublicSubnetApSouth1a
          CidrBlock: !Ref PublicSubnetcidrblockApSouth1a
          MapPublicIpOnLaunch: true
          Tags:
              - Key: Name
                Value: !Ref PublicSubnetNameApsouth1a

    PublicSubnetApSouth1b:
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref AbishekVPC
          AvailabilityZone: !Ref AZNamePublicSubnetApSouth1b
          CidrBlock: !Ref PublicSubnetcidrblockApSouth1b
          MapPublicIpOnLaunch: true
          Tags:
              - Key: Name
                Value: !Ref PublicSubnetNameApsouth1b

#Internet Gateway
    InternetGw:
      Type: AWS::EC2::InternetGateway
      Properties:
          Tags:
              - Key: Name
                Value: !Ref InternetGwName

#Attach Internet gateway to VPC
    InternetGWAttachMent:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
          VpcId: !Ref AbishekVPC
          InternetGatewayId: !Ref InternetGw


#Route Table Public Subnet
    PublicSubnetRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
          VpcId: !Ref AbishekVPC
          Tags:
              - Key: Name
                Value: !Ref RouteTableNamePublicSubnet

#Public Subnet Association with route table
    PublicSubnetAssociationApSouth1a:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PublicSubnetRouteTable
          SubnetId: !Ref PublicSubnetApSouth1a

    PublicSubnetAssociationApSouth1b:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PublicSubnetRouteTable
          SubnetId: !Ref PublicSubnetApSouth1b




#Route for Internet Gateway
    InternetgwRoute:
      Type: AWS::EC2::Route
      Properties:
          RouteTableId: !Ref PublicSubnetRouteTable
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGw

#Private Subnet
    PrivateSubnet:
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref AbishekVPC
          AvailabilityZone: !Ref AZNamePrivateSubnet
          CidrBlock: !Ref PrivateSubnetcidrblock
          Tags:
              - Key: Name
                Value: !Ref PrivateSubnetName

#Private Subnet apsouth 1a
    PrivateSubnetapsouth1a:
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref AbishekVPC
          AvailabilityZone: !Ref AZNamePrivateSubnetApSouth1a
          CidrBlock: !Ref PrivateSubnetcidrblockapsouth1a
          Tags:
              - Key: Name
                Value: !Ref PrivateSubnetNameapsouth1a
#Elastic IP
    ElasticIp:
      Type: AWS::EC2::EIP
      Properties:
          Domain: vpc
                

#NAT Gateway
    NATGw:
      Type: AWS::EC2::NatGateway
      Properties:
        AllocationId: !GetAtt ElasticIp.AllocationId
        SubnetId: !Ref PublicSubnetApSouth1a
        Tags:
            - Key: Name
              Value: !Ref NatGateway

#Route Table Private Subnet
    PrivateSubnetRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
          VpcId: !Ref AbishekVPC
          Tags:
              - Key: Name
                Value: !Ref RouteTableNamePrivateSubnet

#Private Subnet Association with route table
    PrivateSubnetAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PrivateSubnetRouteTable
          SubnetId: !Ref PrivateSubnet

#Private Subnet Association with route table ap south 1a
    PrivateSubnetAssociationApSouth1a:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PrivateSubnetRouteTable
          SubnetId: !Ref PrivateSubnetapsouth1a

#Route for NAT Gateway
    NATgwRoute:
      Type: AWS::EC2::Route
      Properties:
          RouteTableId: !Ref PrivateSubnetRouteTable
          DestinationCidrBlock: 0.0.0.0/0
          NatGatewayId: !Ref NATGw
    

#Security Group for Bastion Host
    BastionHostSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          GroupDescription: "Security Group for Slave"
          VpcId: !Ref AbishekVPC
          SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                CidrIp: 0.0.0.0/0
          Tags:
            - Key: Name
              Value: !Ref BastionHostSecurityGroupName 

        
#Security Group for Master Ec2 Instance
    MasterSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          GroupDescription: "Security Group for Master"
          VpcId: !Ref AbishekVPC
          SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 8080
                ToPort: 8080
                CidrIp: 0.0.0.0/0
          Tags:
            - Key: Name
              Value: !Ref MasterSecurityGroupName 
          
#Security Group for Node Ec2 Instance
#Added MasterSecurityGroup as SourceSecurityGroupId for master to connect to node using ssh
#Added BastionHost Security Group to ssh into the node machine using the Bastion Host
    NodeSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          GroupDescription: "Security Group for Slave"
          VpcId: !Ref AbishekVPC
          SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                SourceSecurityGroupId: !Ref MasterSecurityGroup
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                SourceSecurityGroupId: !Ref BastionHostSecurityGroup
          Tags:
            - Key: Name
              Value: !Ref NodeSecurityGroupName 

#Security Group for Production Ec2 Instance
    ProdInstanceSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          GroupDescription: "Security Group for Production Instance"
          VpcId: !Ref AbishekVPC
          SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                SourceSecurityGroupId: !Ref MasterSecurityGroup
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 5000
                ToPort: 5000
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 9090
                ToPort: 9090
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 3000
                ToPort: 3000
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 9100
                ToPort: 9100
                CidrIp: 0.0.0.0/0
                
          Tags:
            - Key: Name
              Value: !Ref ProdInstanceSecurityGroupName 

#Master Ec2 Instance  
    MasterEC2Instance:
      Type: AWS::EC2::Instance
      Properties:
          ImageId: !Ref MasterInstanceAMI
          KeyName: !Ref KeyPairMaster
          InstanceType: !Ref MasterEc2InstanceType
          SubnetId: !Ref PublicSubnetApSouth1a
          SecurityGroupIds:
              - !Ref MasterSecurityGroup
          UserData:
            Fn::Base64:  |
              #!/bin/bash
              sudo apt update -y
              sudo apt install openjdk-21-jdk -y
              
              sudo wget -O /etc/apt/keyrings/jenkins-keyring.asc \
                https://pkg.jenkins.io/debian-stable/jenkins.io-2026.key
              echo "deb [signed-by=/etc/apt/keyrings/jenkins-keyring.asc]" \
                https://pkg.jenkins.io/debian-stable binary/ | sudo tee \
                /etc/apt/sources.list.d/jenkins.list > /dev/null
              sudo apt update -y
              sudo apt install jenkins -y
          Tags:
            - Key: Name
              Value: !Ref MasterInstanceName
              
#Bastion Host Ec2 Instance 
    # BastionHostEC2Instance:
    #   Type: AWS::EC2::Instance
    #   Properties:
    #       ImageId: !Ref BastionHostAMI
    #       KeyName: !Ref KeyPairBastionHost
    #       InstanceType: !Ref BastionHostEc2InstanceType
    #       SubnetId: !Ref PublicSubnetApSouth1a
    #       SecurityGroupIds:
    #           - !Ref BastionHostSecurityGroup
    #       Tags:
    #         - Key: Name
    #           Value: !Ref BastionHostEc2InstanceName

#Node Ec2 Instance 
    NodeEC2Instance:
      Type: AWS::EC2::Instance
      Properties:
          ImageId: !Ref NodeInstanceAMI
          KeyName: !Ref KeyPairNode
          InstanceType: !Ref NodeEc2InstanceType
          SubnetId: !Ref PrivateSubnet
          SecurityGroupIds:
              - !Ref NodeSecurityGroup
          UserData:
            Fn::Base64: |
              #!/bin/bash
              sudo apt update -y
              sudo apt install python3 -y
              sudo apt remove -y $(dpkg --get-selections docker.io docker-compose docker-compose-v2 docker-doc podman-docker containerd runc | cut -f1)

              # Add Docker's official GPG key:
              sudo apt update -y
              sudo apt install ca-certificates curl -y
              sudo install -m 0755 -d /etc/apt/keyrings
              sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
              sudo chmod a+r /etc/apt/keyrings/docker.asc

              # Add the repository to Apt sources:
              sudo tee /etc/apt/sources.list.d/docker.sources <<EOF
              Types: deb
              URIs: https://download.docker.com/linux/ubuntu
              Suites: $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}")
              Components: stable
              Architectures: $(dpkg --print-architecture)
              Signed-By: /etc/apt/keyrings/docker.asc
              EOF

              sudo apt update -y

              sudo apt install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
              sudo apt install openjdk-21-jdk -y
              sudo apt install python3-pip -y
          Tags:
            - Key: Name
              Value: !Ref NodeInstanceName

#Production Ec2 Instance 
    # ProductionEC2Instance:
    #   Type: AWS::EC2::Instance
    #   Properties:
    #       ImageId: !Ref ProdInstanceAMI
    #       KeyName: !Ref KeyPairMaster
    #       InstanceType: !Ref ProdEc2InstanceType
    #       SubnetId: !Ref PublicSubnetApSouth1a
    #       SecurityGroupIds:
    #           - !Ref ProdInstanceSecurityGroup
    #       UserData:
    #         Fn::Base64: |
    #           #!/bin/bash
    #           sudo apt update -y
    #           sudo apt install python3 -y
    #           sudo apt remove -y $(dpkg --get-selections docker.io docker-compose docker-compose-v2 docker-doc podman-docker containerd runc | cut -f1)

    #           # Add Docker's official GPG key:
    #           sudo apt update -y
    #           sudo apt install ca-certificates curl -y
    #           sudo install -m 0755 -d /etc/apt/keyrings
    #           sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
    #           sudo chmod a+r /etc/apt/keyrings/docker.asc

    #           # Add the repository to Apt sources:
    #           sudo tee /etc/apt/sources.list.d/docker.sources <<EOF
    #           Types: deb
    #           URIs: https://download.docker.com/linux/ubuntu
    #           Suites: $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}")
    #           Components: stable
    #           Architectures: $(dpkg --print-architecture)
    #           Signed-By: /etc/apt/keyrings/docker.asc
    #           EOF

    #           sudo apt update -y

    #           sudo apt install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
    #           sudo apt install openjdk-21-jdk -y
    #       Tags:
    #         - Key: Name
    #           Value: !Ref ProdInstanceName

#Security Group for Production Ec2 Instance
    ALBSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          GroupDescription: "Security Group for ALB"
          VpcId: !Ref AbishekVPC
          SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: 5000
                ToPort: 5000
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 80
                ToPort: 80
                CidrIp: 0.0.0.0/0
          Tags:
            - Key: Name
              Value: !Ref ALBSecurityGroupName 

# ALB
#Application Load balancer
    MyLoadbalancer:
      Type: AWS::ElasticLoadBalancingV2::LoadBalancer
      Properties:
          IpAddressType: ipv4
          Name: !Ref ApplicationLoadBalancerName
          Scheme: !Ref ApplicationLoadBalancerScheme
          SecurityGroups:
            - !Ref ALBSecurityGroup           
          Subnets:
            - !Ref PublicSubnetApSouth1a
            - !Ref PublicSubnetApSouth1b
#At least 2 subnets in 2 different Az should be specified 
          Type: application

#Application Load balancer target group
    MyLoadbalancerTargetGroup:
      Type: AWS::ElasticLoadBalancingV2::TargetGroup
      Properties:
          Name: !Ref ALBTargetGroupName
          Port: 80
          Protocol: HTTP
          TargetType: instance
          VpcId: !Ref AbishekVPC

#Application Load balancer Listener
    MyLoadbalancerListener:
      Type: AWS::ElasticLoadBalancingV2::Listener
      Properties:
        LoadBalancerArn: !Ref MyLoadbalancer
        Port: 80
        Protocol: HTTP
        DefaultActions:
          - Type: forward
            TargetGroupArn: !Ref MyLoadbalancerTargetGroup

#Auto Scaling Group
#Launch Template
    LaunchTemplate:
      Type: AWS::EC2::LaunchTemplate
      Properties:
        LaunchTemplateName: asg-launch-template
        LaunchTemplateData:
          ImageId: !Ref ProdInstanceAMI
          KeyName: !Ref KeyPairMaster
          SecurityGroupIds:
            - !Ref ProdInstanceSecurityGroup
          UserData:
            Fn::Base64: |
              #!/bin/bash
              sudo apt update -y
              sudo apt install python3 -y
              sudo apt remove -y $(dpkg --get-selections docker.io docker-compose docker-compose-v2 docker-doc podman-docker containerd runc | cut -f1)

              # Add Docker's official GPG key:
              sudo apt update -y
              sudo apt install ca-certificates curl -y
              sudo install -m 0755 -d /etc/apt/keyrings
              sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
              sudo chmod a+r /etc/apt/keyrings/docker.asc

              # Add the repository to Apt sources:
              sudo tee /etc/apt/sources.list.d/docker.sources <<EOF
              Types: deb
              URIs: https://download.docker.com/linux/ubuntu
              Suites: $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}")
              Components: stable
              Architectures: $(dpkg --print-architecture)
              Signed-By: /etc/apt/keyrings/docker.asc
              EOF

              sudo apt update -y

              sudo apt install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y

#Added ASG
    AutoScalingGroup:
      Type: AWS::AutoScaling::AutoScalingGroup
      Properties:
        AutoScalingGroupName: !Ref ASGName
        MaxSize: 3
        MinSize: 2
        DesiredCapacity: 3
        LaunchTemplate:
          LaunchTemplateId: !Ref LaunchTemplate
          Version: !GetAtt LaunchTemplate.LatestVersionNumber
        TargetGroupARNs:
          - !Ref MyLoadbalancerTargetGroup
#Instances created in multi AZ subnets are added here
        VPCZoneIdentifier:
          - !Ref PrivateSubnet
